--- a/index.html
+++ b/index.html
@@ -229,12 +229,10 @@
 
   </div>
 
-  <div class="row w-100"
+  <div class="row w-100 container-fluid "
     style="background-color: #1d2228 ; height: 200px;display: flex; justify-content: space-evenly; align-items: center;margin-top: 50px; ;">
-    <div class="service col-lg-3 col-md-6 col-sm-12  " style=" width:200px ; height: 150px;color:#d26b1c  ;font-family: 'Major Mono Display', monospace;">
-      <h2>Adventure</h2>
-      <h2>passion</h2>
-      <h2>Moment</h2>
+    <div class="service col-lg-3 col-md-6 col-sm-12 ps-2   " style=" width:250px ; height: 150px;background-image: url('./images/adventure.png'); background-repeat: no-repeat ; background-size: contain;">
+      
     </div>
     <div class="service col-lg-3 col-md-6 col-sm-12  " style=" width:200px ; height: 150px;">
       <a href="" style="margin-top: 50px;margin-left: 38%; "><i
